--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,21 @@ body, html {
     height: 100%;
 }
 
-/* Header and Footer Styles */
-header, footer {
-    border: 1px solid black;
-}
-
 header {
     display: flex;
     flex-direction: column;
-    text-align: center;
-    margin: 20px;
+    justify-content: center;
 }
 
+/* Header and Footer Styles */
+header, footer {
+    border: 1px solid black;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    padding: 20px;
+}
+
+/* Header Styles */
 ul.navigation {
     display: flex;
     justify-content: center;
@@ -28,32 +31,39 @@ link {
     flex-grow: 1;
 }
 
-/* Container Styles */
-.container {
-    display: flex;
-    flex-direction: row;
-    min-height: calc(100vh - 120px); /* Adjust based on header and footer height */
-    padding: 20px;
-}
-
-/* Sidebar Styles */
-aside {
-    width: 14%; /* Width ratio of 14% */
+.sidebar {
+    position: fixed;
+    left: 0;
+    width: 17%;
+    height: 60%;
     border: 1px solid black;
     padding: 20px;
-    margin-right: 10px;
+    margin-left: 2.5%;
+    margin-top: 2.5%;
+    margin-right: 1.25%;
 }
 
-/* Main Content Styles */
-main {
-    width: 86%; /* Width ratio of 86% */
+.main-content {
+    position: fixed;
+    right: 0;
+    width: 68%;
+    height: 60%;
     border: 1px solid black;
     padding: 20px;
-    margin-left: 10px;
+    margin-left: 1.25%;
+    margin-right: 2.5%;
+    margin-top: 2.5%;
+
 }
+
+/* Footer Styles */
 
 footer {
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    padding: 20px;
+    margin-top: 2.5%;
+    margin-bottom: 1.25%;
+    margin-right: 10%;
 }
 
