--- a/styles.css
+++ b/styles.css
@@ -1,69 +1,54 @@
 /* General Styles */
-body, html {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    height: 100%;
+
+body {
+    display: grid;
+    height:auto;
+    grid-template-columns: 1fr 5fr 1fr; 
+    grid-template-rows: auto 1fr auto; 
+    grid-template-areas:
+    "header header header header header"
+    "sidebar main main main main" /*Ratio of 1:4*/
+    "footer footer footer footer footer";
+}
+
+header, .sidebar, main, footer {
+    border: 2px solid black;
+    padding: 10px;
+    margin: 20px;
+
+    display: flex;
+
 }
 
 header {
-    display: flex;
-    flex-direction: column;
+    grid-area: header;
     justify-content: center;
 }
-
-/* Header and Footer Styles */
-header, footer {
-    border: 1px solid black;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
-    padding: 20px;
-}
-
-/* Header Styles */
-ul.navigation {
-    display: flex;
-    justify-content: center;
-}
-
-link {
-    display: flex;
-    flex-grow: 1;
-}
-
+   
 .sidebar {
-    position: fixed;
-    left: 0;
-    width: 17%;
-    height: 60%;
-    border: 1px solid black;
-    padding: 20px;
-    margin-left: 2.5%;
-    margin-top: 2.5%;
-    margin-right: 1.25%;
-}
+    grid-area: sidebar;
+    flex-grow: 1;
 
-.main-content {
-    position: fixed;
-    right: 0;
-    width: 68%;
-    height: 60%;
-    border: 1px solid black;
-    padding: 20px;
-    margin-left: 1.25%;
-    margin-right: 2.5%;
-    margin-top: 2.5%;
 
 }
+   
+main {
+    grid-area: main;
+    flex-grow: 1;
 
-/* Footer Styles */
-
+}
+   
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    margin-top: 2.5%;
-    margin-bottom: 1.25%;
-    margin-right: 10%;
+    grid-area: footer;
 }
 
+@media (max-width: 500px) {
+    body {
+       grid-template-columns: 1fr 1fr 5fr;
+       grid-template-rows: auto auto auto;
+       grid-template-areas:
+         "header header header header header"
+         "main main main main main"
+         "sidebar footer footer footer footer";
+    }
+}
