--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 header, .sidebar, main, footer {
     border: 2px solid black;
     padding: 10px;
-    margin: 20px;
+    margin: 10px;
 
     display: flex;
 }
@@ -23,7 +23,6 @@ header {
     grid-area: header;
     justify-content: center;
     align-items: center;
-
     flex-direction: column;
 }
 
@@ -32,7 +31,8 @@ header {
     display: flex; /* Use flex display */
     justify-content: center;
     gap: 20%;
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
    
 .sidebar {
@@ -51,6 +51,13 @@ main {
    
 footer {
     grid-area: footer;
+}
+
+img {
+    display: flex;
+    justify-content: center;
+    width: fit-content;
+    height: fit-content;
 }
 
 @media (max-width: 500px) {
