--- a/styles.css
+++ b/styles.css
@@ -56,8 +56,9 @@ footer {
 img {
     display: flex;
     justify-content: center;
-    width: fit-content;
-    height: fit-content;
+    align-items: center;
+    width: 50%;
+    height: 50%;
 }
 
 @media (max-width: 500px) {
