--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,8 @@ footer {
 img {
     display: flex;
     justify-content: center;
+    object-fit: contain;
+    display: inline-block;
     align-items: center;
     width: min-content;
     height: min-content;
